refactor: split proof_axis from target_type in query
